--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <!-- bootstrap css -->
     <link href="//netdna.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" />
   <script
-    src="http://maps.googleapis.com/maps/api/js?key=AIzaSyC4ajJrKW25tgC94XTBGw-4F1oXZZ-NGsQ&libraries=geometry&v=weekly"
+    src="http://maps.googleapis.com/maps/api/js?key=API_KEY&libraries=geometry&v=weekly"
     type="text/javascript"
   ></script>
 </head>
