--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <base href="/" />
-    <title>SODA PARKING - Admin</title>
+    <title>PARKER APP Admin</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- bootstrap css -->
     <link href="//netdna.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" />
