--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- bootstrap css -->
     <link href="//netdna.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script
     src="http://maps.googleapis.com/maps/api/js?key=API_KEY&libraries=geometry&v=weekly"
     type="text/javascript"
